		* UTF8_CopyFile() now uses wxCopyFile().
		* UTF8_RemoveFile() now uses wxRemoveFile().
		* UTF8_MoveFile() now uses wxRenameFile().
		* theApp is now a global pointer, so that we can access the
		  global application object from within a core file.
		* Fix for the COLORREF compilation problem on windows.

	spiralvoice:
		* Patch to enable MLDonkey os_info support.

	Vollstrecker:
		* Added possibility to give the path for output right with
		  -p or -o in cas.
		* Changed cas to use getopt_long.
		* Added --config-dir and -c option to cas.
		* Added alias -H --html to cas.
		* Added alias -P --picture to cas.
		* Added --config-dir and -c option to ed2k.
		* Added --config-dir option to amuled.
		* Fixed typos in the man pages.
		* Added manpage for amulegui.
		* Added amulegui desktop icon (with Gerd78).
		* Manpages update.


--------------------------------------------------------------------------------

Version 2.2.0 - The "So what? If it's new, it has to be good" version
----------
2007-xx-xx

	Special Thanks to:
		* Mr Tyler Durden, for his words of wisdom.

--------------------------------------------------------------------------------

Version 2.1.3 - The "We missed the 6/6/6 devil release and we're very sad" version
----------
2006-06-11

	GonoszTopi:
		* Fixed windows compilation, that was still broken.
		* Fixed locale bug. See http://forum.amule.org/thread.php?threadid=10178&sid=

	ken:
		* Fixed control-clicking (right-clicking) on tabs in notebooks on the
		  Mac.
		* Fixed SmartLowID checks based on a patch/report by eyalzo.

	Kry:
		* Fixed GonozsTopi's fix for locale bug (double init).
		* Added script to import mldonkey downloads into aMule.
		* Fixed "0000867: French traduction is uncorrect grammatically".

	rene06:
		* Allow amulecmd to execute a global, local or kad search. Then
		  you can get the results, which are shown in a list. From that
		  list you can choose one file to download.

	Special Thanks to: