@@ -29,7 +29,7 @@
 #define CAS_GRAPHICS_H
 
 
-int createimage(CONF *config, char *lines[6], char *path_for_picture);
+int createimage(CONF *config, char *lines[7], char *path_for_picture);
 
 #endif
 /* // File_checked_for_headers */
